add_subdirectory("basic")

find_package(fileTestSuite_runner)

message(STATUS "pkgcfg_lib_fileTestSuite_runner_FileTestSuite_runner ${pkgcfg_include_fileTestSuite_runner_FileTestSuite_runner}")
message(STATUS "pkgcfg_lib_fileTestSuite_runner_FileTestSuite_runner ${pkgcfg_lib_fileTestSuite_runner_FileTestSuite_runner}")
add_subdirectory("json")
